src/test/deca/context/invalid/non_provided/bad_comp_boolean.deca
// Description:
//    test comparaison boolean
//
// Resultats:
//    OK

{
  boolean valid = true;
  if (valid > false){
    println("Fail");
  }
}
